--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "qrcode": "^1.5.4",
     "slugify": "^1.6.6",
     "stripe": "^13.4.0"
   },
